--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <br>
 <br>
 <br>
-<center style="background-color:rgba(10, 10, 10,0.7);border-style: solid; border-color:purple;">
-<font color="#800080" style="font-family: 'Grenze Gotisch', cursive;font-size:80px;"><b>Kayda</b></font>
+<center style="background-color:rgba(10, 10, 10,0.7);border-style: solid; border-color:white;">
+<font color="white" style="font-family: 'Grenze Gotisch', cursive;font-size:80px;"><b>Kayda</b></font>
  <br>
 
  
 <br>
-<font color="#990000" face='verdana' style="font-family: 'Tapestry', cursive;font-size:30px;">
+<font color="white" face='verdana' style="font-family: 'Tapestry', cursive;font-size:30px;">
 Aeldfyr’s Devout <br>Standing at a tall 6'5" with a slender and graceful build, this Ascendant Drakanite is as beautiful as she is deadly. <br>Large black and gold wings stretch nearly twice as wide as a human is tall, a clear symbol that she is amongst the ascendants.  <br>Dark ivory horns wrap elegantly into a magnificent crown around her forehead, marking her amongst the purist of the Drakanite bloodlines. <br>With black hair streaked in gold, she exudes an air of both majesty, nobility, but also danger. <br>Her eyes are a bit of an oddity for a Drakanite, as they are of the purist gold; which sparkle with an unnatural avarice shimmer.
 </font>
 
