--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <br>
 <br>
 <center style="background-color:rgba(10, 10, 10,0.7);border-style: solid; border-color:#fffbfb;">
-<font color="#fffbfb" style="font-family: 'Grenze Gotisch', cursive;font-size:80px;"><b>Kayda</b></font>
- <br>
+<font color="white" style="font-family: 'Grenze Gotisch', cursive;font-size:80px;"><b>Kayda</b></font>
 <br>
-<font color="#fffbfb" face='verdana' style="font-family: 'Tapestry', cursive;font-size:30px;">
+<br>
+<font color="white" face='verdana' style="font-family: 'Tapestry', cursive;font-size:30px;">
 Aeldfyr’s Devout <br>Standing at a tall 6'5" with a slender and graceful build, this Ascendant Drakanite is as beautiful as she is deadly. <br>Large black and gold wings stretch nearly twice as wide as a human is tall, a clear symbol that she is amongst the ascendants.  <br>Dark ivory horns wrap elegantly into a magnificent crown around her forehead, marking her amongst the purist of the Drakanite bloodlines. <br>With black hair streaked in gold, she exudes an air of both majesty, nobility, but also danger. <br>Her eyes are a bit of an oddity for a Drakanite, as they are of the purist gold; which sparkle with an unnatural avarice shimmer.
 </font>
 <br>
@@ -30,7 +30,7 @@ Aeldfyr’s Devout <br>Standing at a tall 6'5" with a slender and graceful build
 
 
 <div style="position:fixed;top:0;right:0;margin:0;padding:0; z-index:9999;">
-<audio id="myVideo" controls autoplay src="Final Fantasy VII- City Of The Ancients Theme.mp3" type=audio/mpeg style="max-width: 30vw;">
+<audio id="myVideo" controls autoplay src="Kayda'sGinyuTheme.mp3" type=audio/mpeg style="max-width: 30vwda;">
 </audio>
 </div>
 
