--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Aeldfyr’s Devout <br>Standing at a tall 6'5" with a slender and graceful build
 
 
 <div style="position:fixed;top:0;right:0;margin:0;padding:0; z-index:9999;">
-<audio id="myVideo" controls autoplay src="Kayda'sGinyuTheme.mp3" type=audio/mpeg style="max-width: 30vwda;">
+<audio id="myVideo" controls autoplay src="Kayda'sTheme.mp3" type=audio/mpeg style="max-width: 30vwda;">
 </audio>
 </div>
 
